--- a/instructor-details.html
+++ b/instructor-details.html
@@ -57,12 +57,14 @@
     </div>
     <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>About</h3>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-          <h3>Education</h3>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-          <h3>Experience</h3>
-          <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+          <h3>Acerca de Rosa de Almeida</h3>
+          <p>La Bioneuronutricion se convirtió en mi propia aventura y en una búsqueda constante de mi Ser.
+          <br>Elegí ser Licenciada en Nutrición en función a mi experiencia con el sobrepeso. Siempre fue mi talón de Aquiles, subía y bajaba kilos, entonces me dije que estudiaría nutrición para erradicar la problemática de mi vida.</p>
+          <p>Cuando tenia 37 años, un día desperté y me sentí vacía, sin propósitos preguntándome que me faltaba. Estaba casada con 3 hijos sanos, hermosos, un marido estupendo y una buena vida. Aun así sentía una profunda tristeza. Fue así como sentí la llamada de mi alma muy fuerte hacia esta profesión y decidí hacerla andar.</p> 
+          <p>La bionueronutricion surge como un nuevo paradigma de la Nutrición, donde el protagonista es el SER con sus creencias, sus pensamientos, su estilo de vida, el estado emocional en el que se encuentra, principalmente todo aquello que a un individuo le quite la paz….</p>
+          <p>Años mas tarde llega a mi Un Curso de Milagros, que fue quien dio sentido a mi profesión, y a mi vida entera.
+          <br>El curso me dio herramientas para sentirme esperanzada y recuperando completamente la fe en el Espíritu para entregarme a El y es quien guía hoy mi vida.</p>
+          <p>Me siento implicada y comprometida a compartir el mensaje de Paz y de Amor que el curso imparte, y así lo establecí en mis consultas privadas y en mis talleres grupales.</p>
       </div>
     </div>
   </div>
