Neuro Nut actualizacion UCDM2

--- a/cursoUCDM2.html
+++ b/cursoUCDM2.html
@@ -63,31 +63,16 @@
       </div>
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Que es Un Curso de Milagros 1</h3>
-          <p>
-          <h4>Es un curso 100% espiritual. Es un recurso de aprendizaje.<br>
-            Es Entrenamiento Mental.</h4>
-          Es un plan de estudios para aquellos que buscan despertar y ver la vida de otra manera.
-          La premisa subyacente es que el mayor <a href="https://es.wikipedia.org/wiki/Milagro"
-            target="_blank">"milagro"</a> es el acto de lograr plena
-          <a href="https://es.wikipedia.org/wiki/Un_curso_de_milagros#cite_note-1" target="_blank">"conciencia de la
-            presencia del amor"</a> en la propia vida.
-          El objetivo del curso es conocer como funciona tu mente, tomar consciencia que hay dos consejeros que rigen tu
-          sistema de pensamiento:
-          Sistema de pensamiento dual o ego. Esta Regido por la ley de proyección-percepcion mas conocida como ley de
-          causa y efecto.
-          Sistema de pensamiento único del Espiritu. Esta regido por la ley del Amor de Dios o Amor universal, Origen,
-          Fuente.
-
-          </p>
-          <h3>Programa de Un Curso de Milagros 1</h3>
-          <h4>Curso teórico practico, sus enseñanzas se basan en el libro Un Curso de Milagros</h4>
+          <h3>Curso de Milagros. Estudiantes avanzados</h3>
+          <h4>Seguimos profundizando en el curso</h4>
+          <h3>Programa de Un Curso de Milagros. Estudiantes avanzados</h3>
+          <h4>Tallers teóricos prácticos</h4>
 
           <div class="card text-center mt-4 mb-4 ftco-animate ">
             <div class="card-body">
               <h3 class="card-title">Inicio</h3>
               <i class="fas fa-stopwatch fa-4x"></i>
-              <p class="card-text">sábado 20 de marzo de 2021</p>
+              <p class="card-text">Se dictan los segundos lunes de cada mes</p>
             </div>
           </div>
           <div class="card-deck ftco-animate">
@@ -95,7 +80,7 @@
               <div class="card-body">
                 <h3 class="card-title">Horario</h3>
                 <i class="far fa-clock fa-4x"></i>
-                <p class="card-text">10 AM. a 12 AM.</p>
+                <p class="card-text">6:30 PM. a 21 PM.</p>
               </div>
             </div>
             <div class="card text-center  mt-4 mb-4 ftco-animate">
@@ -109,43 +94,49 @@
               <div class="card-body">
                 <h3 class="card-title">Duración</h3>
                 <i class="far fa-calendar-alt fa-4x "></i>
-                <p class="card-text">5 meses</p>
+                <p class="card-text">12 meses</p>
               </div>
             </div>
           </div>
           <h3>Contenido del curso</h3>
           <ul>
             <li><strong>Taller 1:</strong> <br>
-              Introducción y descripción del Libro. Cimientos del cielo. Como llegamos hasta acá, a este plano, La
-              tierra. Meditación guiada.
+              Cimientos del cielo
             </li>
             <li><strong>Taller 2: </strong><br>
-              Refuerzo de conceptos de los Cimientos del cielo. Explicación del Perdón y Expiación según Un Curso de
-              Milagros. Meditación guiada.
+              Las relaciones
             </li>
             <li><strong>Taller 3: </strong><br>
-              Los niveles de relaciones. Enseñanzas. Santificación. Meditación guiada.
+              El perdón y la Expiación
             </li>
             <li><strong>Taller 4: </strong><br>
-              Relaciones Especiales. Relaciones Santas. Santificar el día y la noche.
+              La enfermedad
             </li>
             <li><strong>Taller 5: </strong><br>
-              La relación con uno mismo. Expiación desde la causa.
+              La muerte
             </li>
             <li><strong>Taller 6: </strong><br>
-              Que es el Instante Santo. Practica.
+              Los símbolos de las palabras
             </li>
             <li><strong>Taller 7: </strong><br>
-              El cuerpo Físico. Dolor. Enfermedad. Carta al cuerpo.
+              Mundo feliz, mundo físico
             </li>
             <li><strong>Taller 8: </strong><br>
-              La Extensión de un Curso de Milagros. Propósitos. Practicas.
+              Jesús
             </li>
             <li><strong>Taller 9: </strong><br>
-              Proyección o Extensión. La Extensión como recurso de creación.
+              La oración
             </li>
             <li><strong>Taller 10: </strong><br>
-              Ejercicio del Arco del Perdón. La oración.
+              Psicoterapia
+            </li>
+            <li><strong>Taller 11: </strong><br>
+              Autopsicoterapia
+            </li>
+            <li><strong>Taller 12: </strong><br>
+              Reflexiones finales. Cierre <br>
+              Meditaciones. Prácticas de psicoterapias
+
             </li>
           </ul>
         </div>
