--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
-                <div class="col-md-7 ftco-animate">
+                <div id="titularHome" class="col-md-7 ftco-animate">
                     <span class="subheading">Bio Neuro Nutricion</span>
                     <h1 class="mb-4">Enfoque holístico espiritual.</h1>
                     <p class="caps">Nutrición con Responsabilidad y honestidad.
