Neuro Nut actualizacion 1.2

--- a/course.html
+++ b/course.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Bio Neuro Nutricion : : UCDM</title>
+	<title>Bio Neuro Nutricion : : Cursos</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -45,6 +45,9 @@
 	</section>
 
 	<section class="ftco-section bg-light">
+		<div class="container">
+			<h1>Nuestros Cursos</h1>
+		</div>
 		<div class="container">
 			<div id="cursosVihgentes" class="row ftco-animate"></div>
 
