--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         Poder, Decision, Aceptacion.
                         Sano mi mente, sano mi cuerpo…..
                     </p>
-                    <p class="mb-0"><a href="./course.html" class="btn btn-primary">Cursos</a> 
-                                    <a href="./about.html" class="btn btn-white">Saber más</a></p>
+                    <p class="mb-0"><a href="./course.html" class="btn btn-primary">Nuestros Cursos</a> 
+                                    <!-- <a href="./about.html" class="btn btn-white">Saber más</a></p> -->
                 </div>
             </div>
         </div>
@@ -353,7 +353,7 @@
                     <h2 class="mb-4">Publicaciones destacadas</h2>
                 </div>
             </div>
-            <div id="ultimosPost" class="row d-flex ftco-animate">
+            <div id="ultimosPost" class="row d-flex ftco-animate card-deck">
    
             </div>
         </div>
