--- a/cursoNeuroNut.html
+++ b/cursoNeuroNut.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Bio Neuro Nutricion : : Bio Neuro Nutrición</title>
+	<title>Bio Neuro Nutricion : : Creando un Nuevo Sendero 1</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -50,60 +50,49 @@
           
           <div id="NeuroNut" class="col-md-12 ftco-animate"></div>
           <div class="container">
-            <div class="staff-detail "><h3>Reservá tu curso de<br>Bio Neuro Nutrición</h3> </div>
+            <div class="staff-detail "><h3>Reservá tu curso de<br>Creando un Nuevo Sendero 1</h3> </div>
 
           </div>
           <div class="project-wrap col-11 mx-auto d-flex align-items-center align-items-stretch">
             <form id="formNeuroNut" class="pt-2 col-12"></form>
           </div>
 
-          <div class="img-wrap d-flex align-items-stretch col-12">
-            <div class="img align-self-stretch d-flex align-items-end"
-              style="background-image: url(images/teacher-1.jpg);">
-              <div class="text mb-4 text-md-center">
-                <h3>Lic. Rosa de Almeida</h3>
-                <span class="position mb-2">Contacto</span>
-                <div class="faded">
-                  <!-- <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p> -->
-                  <ul class="ftco-social">
-                    <!-- <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li> -->
-                    <li class="ftco-animate"><a href="#"><i class="fab fa-facebook-f "></i></a></li>
-                    <!-- <li class="ftco-animate"><a href="#"><span class="fa fa-google"></span></a></li> -->
-                    <li class="ftco-animate"><a href="#"><i class="fab fa-instagram "></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div id="instructorCurso"></div>
+
         </div>
       </div>
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Que es Un Curso de Milagros 1</h3>
+          <h3>Que es Creando un Nuevo Sendero 1</h3>
           <p>
-          <h4>Es un curso 100% espiritual. Es un recurso de aprendizaje.<br>
-            Es Entrenamiento Mental.</h4>
-          Es un plan de estudios para aquellos que buscan despertar y ver la vida de otra manera.
-          La premisa subyacente es que el mayor <a href="https://es.wikipedia.org/wiki/Milagro"
-            target="_blank">"milagro"</a> es el acto de lograr plena
-          <a href="https://es.wikipedia.org/wiki/Un_curso_de_milagros#cite_note-1" target="_blank">"conciencia de la
-            presencia del amor"</a> en la propia vida.
-          El objetivo del curso es conocer como funciona tu mente, tomar consciencia que hay dos consejeros que rigen tu
-          sistema de pensamiento:
-          Sistema de pensamiento dual o ego. Esta Regido por la ley de proyección-percepcion mas conocida como ley de
-          causa y efecto.
-          Sistema de pensamiento único del Espiritu. Esta regido por la ley del Amor de Dios o Amor universal, Origen,
-          Fuente.
-
+          <h4>Nutrición y Espiritualidad.<br>
+            Ser feliz cambiando mi Templo.</h4>
+            <p>Te presento mi curso <strong>“creando un nuevo sendero”</strong>, es un viaje de transformación de ser victima del peso, del cuerpo, de la alimentación hacia un nuevo paradigma de ser creador de tu nuevo sendero. El proposito del curso es ir hacia el sendero que te conduzca a la Paz interior.</p>
+            <p>Este paradigma se basa en mi propia experiencia, en mi historia de vida. He tomado muchos caminos, los he recorrido con logros, fracasos, frustraciones, hasta que halle el mío propio de la mano del Espíritu Santo, quien me guía creando este sendero, fruto de todo lo experimentado, logrando aceptarme, sentirme libre y en Paz.</p>
+            <p>Para ello he atravesado crisis, oscuridades, miedos, culpas, todo esto acumulándose en mi sombra interior, guardándolo inconscientemente, pero con la llegada de la bioneuroemocion y Un Curso de Milagros han marcado un antes y un después, convirtiéndose en un AHORA. He descubierto una parte de mi mente que sabe y que puede, que es aquella en la cual el Guía esta en comunión con la Fuente, Origen, Dios, Universo. Desde esta parte de la mente que se tiene que entrenar porque no es con la que pensamos comúnmente, se logra crear una nueva vida pacifica, con pensamientos amorosos, en plenitud y confianza.<br></p>
+            <p>Este paradigma es una invitación a reescribir tu historia, a lograr un cuerpo saludable, con una mente sana, para dar cada paso con plena consciencia de como quieres sentirte, de como quieres pensar y así crear este nuevo sendero.</p>
+            <p>Este paradigma se trata de desaprender para aprender de nuevo, atendiéndote, aceptándote y alineándote.            </p>
           </p>
-          <h3>Programa de Un Curso de Milagros 1</h3>
-          <h4>Curso teórico practico, sus enseñanzas se basan en el libro Un Curso de Milagros</h4>
+          <h3>Este paradigma requiere:</h3>
+            <ol>
+              <li>Pequeña dosis de buena voluntad para escuchar. Confianza</li>
+              <li>No juzgar, aprender a observar, integrar</li>
+              <li>Decidir de nuevo</li>
+            </ol>
+            <h3>Con este curso aprenderás:</h3>
+              <ul>
+                <li>Alimentación consciente: alimentos, recetas, formas de preparación, porciones, combinaciones, ayunos, limpiezas.</li>
+                <li>Como funciona el aparato digestivo, sanar disfunciones alimentándote sanamente, espiritualmente.</li>
+                <li>Sanación de la mente. Como funciona nuestra mente. Mente dual. Ego. Mente uno. Espíritu. </li>
+                <li>Aprenderás el arte de escuchar el cuerpo, a través de señales o síntomas. Conociendo como piensas, a que asesor de la mente escuchas, cuales son tus creencias, tus limitaciones, bloqueos.</li>
+                <li>Aprenderás auto decodificar conflictos, a través de la meditación y respiración consciente, indispensable para tomar nuevas decisiones.</li>
+              </ul>
 
           <div class="card text-center mt-4 mb-4 ftco-animate ">
             <div class="card-body">
               <h3 class="card-title">Inicio</h3>
               <i class="fas fa-stopwatch fa-4x"></i>
-              <p class="card-text">sábado 20 de marzo de 2021</p>
+              <p class="card-text">Octubre 2021</p>
             </div>
           </div>
           <div class="card-deck ftco-animate">
@@ -111,7 +100,7 @@
               <div class="card-body">
                 <h3 class="card-title">Horario</h3>
                 <i class="far fa-clock fa-4x"></i>
-                <p class="card-text">10 AM. a 12 AM.</p>
+                <p class="card-text"><strong>jueves</strong><br>de 6 PM. a 9 PM.</p>
               </div>
             </div>
             <div class="card text-center  mt-4 mb-4 ftco-animate">
@@ -129,41 +118,6 @@
               </div>
             </div>
           </div>
-          <h3>Contenido del curso</h3>
-          <ul>
-            <li><strong>Taller 1:</strong> <br>
-              Introducción y descripción del Libro. Cimientos del cielo. Como llegamos hasta acá, a este plano, La
-              tierra. Meditación guiada.
-            </li>
-            <li><strong>Taller 2: </strong><br>
-              Refuerzo de conceptos de los Cimientos del cielo. Explicación del Perdón y Expiación según Un Curso de
-              Milagros. Meditación guiada.
-            </li>
-            <li><strong>Taller 3: </strong><br>
-              Los niveles de relaciones. Enseñanzas. Santificación. Meditación guiada.
-            </li>
-            <li><strong>Taller 4: </strong><br>
-              Relaciones Especiales. Relaciones Santas. Santificar el día y la noche.
-            </li>
-            <li><strong>Taller 5: </strong><br>
-              La relación con uno mismo. Expiación desde la causa.
-            </li>
-            <li><strong>Taller 6: </strong><br>
-              Que es el Instante Santo. Practica.
-            </li>
-            <li><strong>Taller 7: </strong><br>
-              El cuerpo Físico. Dolor. Enfermedad. Carta al cuerpo.
-            </li>
-            <li><strong>Taller 8: </strong><br>
-              La Extensión de un Curso de Milagros. Propósitos. Practicas.
-            </li>
-            <li><strong>Taller 9: </strong><br>
-              Proyección o Extensión. La Extensión como recurso de creación.
-            </li>
-            <li><strong>Taller 10: </strong><br>
-              Ejercicio del Arco del Perdón. La oración.
-            </li>
-          </ul>
         </div>
       </div>
     </div>
@@ -210,6 +164,7 @@
 
 <script src="./js/cursos.js"></script>
 <script src="./js/forms.js"></script>
+<script src="./js/class/instructor.js"></script>
 
 <script>
   const pageTitle = document.getElementById('pageTitle');
@@ -218,8 +173,9 @@
   activeMenuItem.addClass( "active" );
   crearCursoDestacado(contNeuro)
   // cusrsosDisponibles(contUCDM1,'4')
-  cusrsosDisponibles(contUCDM1,'6')
-  cusrsosDisponibles(contUCDM2,'6')
+  cusrsosDisponibles(contUCDM1,'4')
+  cusrsosDisponibles(contUCDM2,'4')
+  cusrsosDisponibles(contUCDM2,'4')
 </script>
 
 <script src="./js/precios.js"></script>
