--- a/cursoUCDM2.html
+++ b/cursoUCDM2.html
@@ -64,8 +64,38 @@
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
           <h3>Curso de Milagros. Estudiantes avanzados</h3>
-          <h4>Seguimos profundizando en el curso</h4>
-          <h3>Programa de Un Curso de Milagros. Estudiantes avanzados</h3>
+          <h4>Este curso esta dirigido a estudiantes que ya han hecho el nivel inicial, el <a href="./cursoUCDM1.html">UCDM nivel 1</a>, que se encuentran familiarizados con el lenguaje, las premisas del Libro UCDM.</h4>
+          <p>
+            El proposito del curso es interiorizar los temas del libro, profundizando, analizando y practicando, siempre en búsqueda de la Paz.
+            Es un curso teórico practico para lograr vivir desde una perspectiva de paz interior.
+            Cada mes nos reunimos para exponer uno de los temas, y hacemos una dinámica practica para aprender e integrar el tema.
+            Es un aprendizaje continuo, no tiene principio ni fin, es una propuesta que cada uno puede tomar para sentirse acompañado en el estudio del curso.
+            </p>
+          <h4>Entre los temas a tratar:</h4>
+          <div class="row">
+            <div class="col-md-6">
+              <ul>
+                <li>Los dos mundos.</li>
+                <li>Proyección. Percepción.</li>
+                <li>Perdón de Dios.</li>
+                <li>El instante santo.</li>
+                <li>La oración.</li>
+                <li>La culpa.</li>
+              </ul>
+
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li>El deseo de ser especial. Las relaciones.</li>
+                <li>Psicoterapia.</li>
+                <li>Practicas de psicoterapia grupales.</li>
+                <li>Reglas para tomar decisiones.</li>
+                <li>Las leyes del caos.</li>
+              </ul>
+
+            </div>
+          </div>
+          <h3 class="mt-2">Programa de Un Curso de Milagros. Estudiantes avanzados</h3>
           <h4>Tallers teóricos prácticos</h4>
 
           <div class="card text-center mt-4 mb-4 ftco-animate ">
