--- a/instructor-details.html
+++ b/instructor-details.html
@@ -57,7 +57,7 @@
     </div>
     <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Acerca de Rosa de Almeida</h3>
+          <h3>Acerca de Rosa B. de Almeida</h3>
           <p>La Bioneuronutricion se convirtió en mi propia aventura y en una búsqueda constante de mi Ser.
           <br>Elegí ser Licenciada en Nutrición en función a mi experiencia con el sobrepeso. Siempre fue mi talón de Aquiles, subía y bajaba kilos, entonces me dije que estudiaría nutrición para erradicar la problemática de mi vida.</p>
           <p>Cuando tenia 37 años, un día desperté y me sentí vacía, sin propósitos preguntándome que me faltaba. Estaba casada con 3 hijos sanos, hermosos, un marido estupendo y una buena vida. Aun así sentía una profunda tristeza. Fue así como sentí la llamada de mi alma muy fuerte hacia esta profesión y decidí hacerla andar.</p> 
