--- a/course.html
+++ b/course.html
@@ -74,10 +74,7 @@
 			<script src="js/jquery.animateNumber.min.js"></script>
 			<script src="js/bootstrap-datepicker.js"></script>
 			<script src="js/scrollax.min.js"></script>
-			<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-			<script src="js/google-map.js"></script> -->
 			<script src="js/main.js"></script>
-
 			<script src="./js/navBar.js"></script>
 			<script src="./js/cursos.js"></script>
 
@@ -87,7 +84,8 @@
 				cusrsosDisponibles(contUCDM1,'4')
 				cusrsosDisponibles(contUCDM2,'4')
 				cusrsosDisponibles(contNeuro,'4')
-			  </script>
+				cusrsosDisponibles(contNeuro,'4')
+			</script>
 			
 		</body>
 		</html>
