--- a/course.html
+++ b/course.html
@@ -81,10 +81,10 @@
 			<script>
 				const pageTitle = document.getElementById('pageTitle');
 				pageTitle.innerText = links.course.textLink;
-				cusrsosDisponibles(contUCDM1,'4')
-				cusrsosDisponibles(contUCDM2,'4')
-				cusrsosDisponibles(contNeuro,'4')
-				cusrsosDisponibles(contNeuro,'4')
+				cusrsosDisponibles(contUCDM1,'6')
+				cusrsosDisponibles(contUCDM2,'6')
+				cusrsosDisponibles(contNeuro,'6')
+				cusrsosDisponibles(contNeuroL2,'6')
 			</script>
 			
 		</body>
