--- a/index.html
+++ b/index.html
@@ -383,8 +383,6 @@
     <script src="js/jquery.animateNumber.min.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/scrollax.min.js"></script>
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script> -->
-    <!-- <script src="js/google-map.js"></script> -->
     <script src="js/main.js"></script>
 
     <script src="./js/navBar.js"></script>
@@ -396,9 +394,10 @@
 
     <script>
         crearCursoDestacado(contUCDM1)
-        cusrsosDisponibles(contUCDM1, '4')
-        cusrsosDisponibles(contUCDM2, '4')
-        cusrsosDisponibles(contNeuro, '4')
+        cusrsosDisponibles(contUCDM1, '6')
+        cusrsosDisponibles(contUCDM2, '6')
+        cusrsosDisponibles(contNeuro, '6')
+        cusrsosDisponibles(contNeuroL2, '6')
     </script>
 
 </body>
