--- a/cursoUCDM1.html
+++ b/cursoUCDM1.html
@@ -153,11 +153,31 @@
     </div>
   </div>
 </section>
+<section id="formaDePago">
+  <div class="container ftco-animate">
+    <div class="row staff-detail d-flex justify-content-center">
+      <div class=" col-md-5 card text-center mt-4 mb-4 project-wrap mr-2">
+        <div class="card-body text">
+            <h3 class="card-title">Argentina</h3>
+            <img src="./images/SVG/mercadoPagoCjaH.svg" alt="" class="mb-3">
+            <div id="opcionPagoML"></div>
+        </div>
+      </div>
+      <div class=" col-md-5 card text-center mt-4 mb-4 project-wrap ml-2">
+        <div class="card-body text">
+            <h3 class="card-title">Otros Países</h3>
+            <img src="./images/SVG/paypal-logo.svg" alt="" class="mb-3">
+            <div id="opcionPagoPP"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <section class="ftco-section bg-light ftco-no-pt">
   <div class="container">
     <div class="row pb-4">
-      <div class="col-md-12 heading-section ftco-animate">
+      <div class="col-md-12 heading-section ftco-animate mt-5">
         <h2 class="mb-4">Otros cursos de la <strong> Lic. Rosa de Almeida</strong></h2>
       </div>
     </div>
@@ -165,6 +185,7 @@
     </div>
   </div>
 </section>
+
 
 <footer></footer>
 
@@ -186,8 +207,6 @@
 <script src="js/jquery.animateNumber.min.js"></script>
 <script src="js/bootstrap-datepicker.js"></script>
 <script src="js/scrollax.min.js"></script>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script> -->
-<!-- <script src="js/google-map.js"></script> -->
 <script src="js/main.js"></script>
 
 <script src="./js/navBar.js"></script>
@@ -201,10 +220,12 @@
   pageTitle.innerText = links.course.cursos.UCDM1.textLink;
   const activeMenuItem = $('#cursos');
   activeMenuItem.addClass( "active" );
-  crearCursoDestacado(contUCDM1)
-  // cusrsosDisponibles(contUCDM1,'4')
-  cusrsosDisponibles(contUCDM2,'6')
-  cusrsosDisponibles(contNeuro,'6')
+  crearCursoDestacado(contUCDM1);
+  cusrsosDisponibles(contUCDM2,'4');
+  cusrsosDisponibles(contNeuro,'4');
+  cusrsosDisponibles(contNeuroL2,'4');
+  crearPreciosML(contUCDM1);
+  crearPreciosPP(contUCDM1);
 </script>
 
 <script src="./js/precios.js"></script>
