--- a/cursoUCDM1.html
+++ b/cursoUCDM1.html
@@ -206,7 +206,7 @@
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/jquery.animateNumber.min.js"></script>
 <script src="js/bootstrap-datepicker.js"></script>
-<script src="js/scrollax.min.js"></script>
+<!-- <script src="js/scrollax.min.js"></script> -->
 <script src="js/main.js"></script>
 
 <script src="./js/navBar.js"></script>
