--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
                 <div id="titularHome" class="col-md-7 ftco-animate">
-                    <span class="subheading">Bio Neuro Nutricion</span>
+                    <span class="subheading">Bio Neuro Nutrición</span>
                     <h1 class="mb-4">Enfoque holístico espiritual.</h1>
                     <p class="caps">Nutrición con Responsabilidad y honestidad.
-                        Poder, Decision, Aceptacion.
-                        Sano mi mente, sano mi cuerpo…..
+                        Poder, Decisión, Aceptación.
+                        Sano mi mente, sano mi cuerpo...
                     </p>
-                    <p class="mb-0"><a href="./course.html" class="btn btn-primary">Nuestros Cursos</a> 
+                    <p class="mb-0"><a href="./course.html" class="btn btn-primary">Nuestros Cursos</a>
+                        
                                     <!-- <a href="./about.html" class="btn btn-white">Saber más</a></p> -->
                 </div>
             </div>
@@ -152,10 +153,7 @@
                 </div>
             </div>
             <div id="cursosVihgentes" class="row ftco-animate">
-
-
-
-            </div>
+        </div>
         </div>
     </section>
 
@@ -282,68 +280,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section class="ftco-section services-section">
-  <div class="container">
-    <div class="row d-flex">
-      <div class="col-md-6 heading-section pr-md-5 ftco-animate d-flex align-items-center">
-         <div class="w-100 mb-4 mb-md-0">
-            <span class="subheading">Welcome to StudyLab</span>
-            <h2 class="mb-4">We Are StudyLab An Online Learning Center</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-            <div class="d-flex video-image align-items-center mt-md-4">
-              <a href="#" class="video img d-flex align-items-center justify-content-center" style="background-image: url(images/about.jpg);">
-                 <span class="fa fa-play-circle"></span>
-             </a>
-             <h4 class="ml-4">Learn anything from StudyLab, Watch video</h4>
-         </div>
-     </div>
- </div>
- <div class="col-md-6">
-     <div class="row">
-        <div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-          <div class="services">
-            <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-tools"></span></div>
-            <div class="media-body">
-              <h3 class="heading mb-3">Top Quality Content</h3>
-              <p>A small river named Duden flows by their place and supplies</p>
-          </div>
-      </div>      
-  </div>
-  <div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-      <div class="services">
-        <div class="icon icon-2 d-flex align-items-center justify-content-center"><span class="flaticon-instructor"></span></div>
-        <div class="media-body">
-          <h3 class="heading mb-3">Highly Skilled Instructor</h3>
-          <p>A small river named Duden flows by their place and supplies</p>
-      </div>
-  </div>    
-</div>
-<div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-  <div class="services">
-    <div class="icon icon-3 d-flex align-items-center justify-content-center"><span class="flaticon-quiz"></span></div>
-    <div class="media-body">
-      <h3 class="heading mb-3">World Class &amp; Quiz</h3>
-      <p>A small river named Duden flows by their place and supplies</p>
-  </div>
-</div>      
-</div>
-<div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-  <div class="services">
-    <div class="icon icon-4 d-flex align-items-center justify-content-center"><span class="flaticon-browser"></span></div>
-    <div class="media-body">
-      <h3 class="heading mb-3">Get Certified</h3>
-      <p>A small river named Duden flows by their place and supplies</p>
-  </div>
-</div>      
-</div>
-</div>
-</div>
-</div>
-</div>
-</section> -->
-
 
     <section class="ftco-section bg-light">
         <div class="container">
